[gd_scene load_steps=8 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://party/Party.tscn" type="PackedScene" id=2]
[ext_resource path="res://local_map/LocalMap.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/shaders/TransitionColor.tscn" type="PackedScene" id=4]
[ext_resource path="res://interface/game_over/GameOverInterface.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/audio/bgm/battle_theme.ogg" type="AudioStream" id=6]
[ext_resource path="res://core/MusicPlayer.gd" type="Script" id=7]

[node name="Game" type="Node"]
script = ExtResource( 1 )

[node name="Party" parent="." instance=ExtResource( 2 )]
visible = false

[node name="LocalMap" parent="." instance=ExtResource( 3 )]

[node name="Overlays" type="CanvasLayer" parent="."]

[node name="TransitionColor" parent="Overlays" instance=ExtResource( 4 )]
margin_left = -3.0
margin_right = -3.0
mouse_filter = 2

[node name="GameOverInterface" parent="." instance=ExtResource( 5 )]
layer = 0

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "Music"
script = ExtResource( 7 )

[connection signal="combat_finished" from="." to="LocalMap" method="_on_Game_combat_finished"]
[connection signal="enemies_encountered" from="LocalMap" to="." method="enter_battle"]
[connection signal="restart_requested" from="GameOverInterface" to="." method="_on_GameOverInterface_restart_requested"]
